# Shapley-Value-Regression

./: .gitignore  .readthedocs.yaml  TIMEComplexity.md  example_code.py  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: release.yaml
src/docs/: requirements.txt
src/docs/source/: comparison-with-alternative-methods.rst  computational-considerations.rst  conf.py  historical-background.rst  index.rst  mathematical-foundation.rst  shapley-value-regression.rst
src/docs/source/_static/: compact_table.css  custom.css  font.css  logo.css  source_code.css
src/docs/source/module/: class-ref.rst  installation.rst  quickstart.rst
src/models/: shapley.py
src/shapley/: __init__.py
src/shapley/data/: Distance_Metro_KM.csv  death.csv  load.py
src/shapley/models/: shapley.py
test/: test.py
test/data/: air_quality.csv
